--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AndroidChess</string>
     <string name="playback_game">Playback Game</string>
     <string name="new_game">New Game</string>
+    <string name="textview">TextView</string>
 </resources>
