--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="draw">Draw</string>
     <string name="resign">Resign</string>
     <string name="ai">AI Move</string>
+    <string name="undo">Undo</string>
 </resources>
