--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="resign">Resign</string>
     <string name="ai">AI Move</string>
     <string name="undo">Undo</string>
+    <string name="dialog_draw">Are you sure you want to draw?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="black">Black</string>
+    <string name="white">White</string>
+    <string name="previous_move">Previous Move</string>
+    <string name="next_move">Next Move</string>
 </resources>
